Crash while changing values in comp editor (bt and blender included) #32087

Closed
opened 2012-07-12 15:43:03 +02:00 by Danny McGrath · 4 comments
Member

%%%Originally reported on irc by DolphinDream on OSX.

I was able to reproduce on 64bit Linux r48857.

To reproduce it took a while (as DolphinDream indeed mentioned). Basically I just constantly changed values while comp was rerendering, only took like 5 minutes :)

I have attached Dolphin's original blender, as well as the backtrace.%%%

%%%Originally reported on irc by DolphinDream on OSX. I was able to reproduce on 64bit Linux r48857. To reproduce it took a while (as DolphinDream indeed mentioned). Basically I just constantly changed values while comp was rerendering, only took like 5 minutes :) I have attached Dolphin's original blender, as well as the backtrace.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Jeroen, this seems to be exactly the same issue we've been discussing yesterday. We could collaborate further brainstorming better solution if you don't have it yet :)%%%

%%%Jeroen, this seems to be exactly the same issue we've been discussing yesterday. We could collaborate further brainstorming better solution if you don't have it yet :)%%%

%%%Discussed with atmind in IRC. Fix commited to svn rev48893.
Thanks for the report, closing it now.%%%

%%%Discussed with atmind in IRC. Fix commited to svn rev48893. Thanks for the report, closing it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#32087
No description provided.